# tld-cppimp

./: .gitignore  CMakeLists.txt  MedianFlowTracker.cpp  Predator.cpp  boundingbox.cpp  boundingbox.h  clusterer.cpp  detector.cpp  main.cpp  main_skeleton.cpp  main_skeleton.h  nnclassifier.cpp  params.cpp  tld-cppimp.cbp  tld-cppimp.depend  tld-cppimp.layout  tldConfig.txt  tld_util.h
MedianFlowTracker/: MedianFlowTracker.cpp  MedianFlowTracker.h
MedianFlowTracker/mftracker/: bb_predict.cpp  bb_predict.h  fbtrack.cpp  fbtrack.h  lk.cpp
Resources/: tldConfig.txt  tldConfigsOUT.txt
include/: Predator.h  boundingbox.h  clusterer.h  detector.h  feature.h  featureTracker.h  fern.h  ffclassifier.h  fourbitbp.h  includes.h  main_skeleton.h  nnclassifier.h  normalizedpatch.h  serializable.h  tld_util.h  twobitbp.h  variancefilter.h
src/: Predator.cpp  boundingbox.cpp  clusterer.cpp  detector.cpp  featureTracker.cpp  fern.cpp  ffclassifier.cpp  fourbitbp.cpp  main.cpp  main_skeleton.cpp  nnclassifier.cpp  normalizedpatch.cpp  params.cpp  test.cpp  tld_util.cpp  twobitbp.cpp  variancefilter.cpp
